# Aletheia

./: .gitignore  GEMINI.md  README.md  SPEC_GEMINI_DETECTOR.md  TODO.md  app.py  app.py.orig  benchmark_suite.py  cloudbuild.yaml  deploy.sh  gemini_training_data.json  generate_training_data.py  main.py  patch.diff  pyproject.toml  repro_xss.py  requirements.txt  research_article.md  run.sh  run_test.sh  tfidf_model.pkl  train_enhanced_model.py  train_ensemble.py  verify_gemini_detection.py
.jules/: palette.md  sentinel.md
SPECIFICATIONS/: SPEC_IA_DETECTOR.md
data/: adversarial_samples.json
docs/: vertex_workflow.md  youtube_description.md
docs/benchmarks/: comprehensive_results.md  methodology_and_results.md
docs/practical/: burstiness_guide.md  ensemble_guide.md  gltr_guide.md  perplexity_guide.md  (+2 more)
ia_detector/: __init__.py  binoculars.py  burstiness.py  cache.py  config.py  ensemble.py  features.py  gltr.py  llm_judge.py  perplexity.py  semantic_consistency.py  structural.py  surrogate_ppl.py  validation.py  vector_style.py  vertex_metrics.py
scripts/: benchmark_semantic.py  benchmark_suite.py  fetch_and_test.py  generate_adversarial_data.py  generate_training_data.py  run_benchmark.py  run_vertex_eval.py  train_ensemble.py  verify_gemini_detection.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_burstiness.py  test_cache.py  test_ensemble.py  test_gltr.py  test_latest_gemini_models.py  test_llm_judge.py  test_new_features.py  test_perplexity.py  test_semantic_consistency.py  test_tfidf.py  test_tfidf_cache.py  test_validation.py
(+9 files in other folders)
