[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aletheia"
version = "2.0.0"
description = "AI Text Forensics & Detection Framework"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "torch",
    "transformers",
    "scikit-learn",
    "spacy",
    "google-genai",
    "plotly",
    "joblib",
    "pydantic",
    "numpy<2.0.0"
]

[tool.setuptools.packages.find]
include = ["ia_detector*"]
